feat: Katalog-Browse-Runtime vereinheitlichen
Co-Authored-By: OpenAI Codex <codex@openai.com>